# firefly-report

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: docker.yaml
src/: firefly.rs  lib.rs  main.rs
src/firefly/: api.rs
templates/: html-report.html
