[package]
name = "firefly-report"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = true, features = ["blocking", "json"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1.46", features = ["macros"] }
tinytemplate = "1.2.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.41", features = ["derive"] }
